@@ -360,18 +360,18 @@ static int audio_process(nframes_t nframes, void *arg) {
       // assign local copy from cache_buffers
       if (mainw->playing_file==-1 || (cache_buffer = pop_cache_buffer())==NULL || !cache_buffer->is_ready) {
         // audio buffer is not ready yet
-        if (mainw->audio_frame_buffer!=NULL) {
+	if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
           pthread_mutex_lock(&mainw->abuf_frame_mutex);
         }
         for (i = 0; i < jackd->num_output_channels; i++) {
           if (!jackd->is_silent) {
             sample_silence_dS(out_buffer[i], nframes);
           }
-          if (mainw->audio_frame_buffer!=NULL) {
+          if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
             append_to_audio_bufferf(mainw->audio_frame_buffer,out_buffer[i],nframes,i);
           }
         }
-        if (mainw->audio_frame_buffer!=NULL) {
+	if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
           mainw->audio_frame_buffer->samples_filled+=nframes;
           pthread_mutex_unlock(&mainw->abuf_frame_mutex);
         }
@@ -416,16 +416,16 @@ static int audio_process(nframes_t nframes, void *arg) {
 
       /* output silence if nothing is being outputted */
       if (!jackd->is_silent) {
-        if (mainw->audio_frame_buffer!=NULL) {
+	if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
           pthread_mutex_lock(&mainw->abuf_frame_mutex);
         }
         for (i = 0; i < jackd->num_output_channels; i++) {
           sample_silence_dS(out_buffer[i], nframes);
-          if (mainw->audio_frame_buffer!=NULL) {
+          if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
             append_to_audio_bufferf(mainw->audio_frame_buffer,out_buffer[i],nframes,i);
           }
         }
-        if (mainw->audio_frame_buffer!=NULL) {
+	if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
           mainw->audio_frame_buffer->samples_filled+=nframes;
           pthread_mutex_unlock(&mainw->abuf_frame_mutex);
         }
@@ -513,16 +513,16 @@ static int audio_process(nframes_t nframes, void *arg) {
             if (!wait_cache_buffer&&((mainw->agen_key==0&&!mainw->agen_needs_reinit)||mainw->multitrack!=NULL))
               push_cache_buffer(cache_buffer, jackd, in_bytes, nframes, shrink_factor);
 
-            if (mainw->audio_frame_buffer!=NULL) {
+	    if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
               pthread_mutex_lock(&mainw->abuf_frame_mutex);
             }
             for (i = 0; i < jackd->num_output_channels; i++) {
               sample_silence_dS(out_buffer[i], nframes);
-              if (mainw->audio_frame_buffer!=NULL) {
+              if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
                 append_to_audio_bufferf(mainw->audio_frame_buffer,out_buffer[i],nframes,i);
               }
             }
-            if (mainw->audio_frame_buffer!=NULL) {
+	    if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
               mainw->audio_frame_buffer->samples_filled+=nframes;
               pthread_mutex_unlock(&mainw->abuf_frame_mutex);
             }
@@ -579,16 +579,16 @@ static int audio_process(nframes_t nframes, void *arg) {
         if (!jackd->in_use||in_bytes==0) {
           // reached end of audio with no looping
 
-          if (mainw->audio_frame_buffer!=NULL) {
+          if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
             pthread_mutex_lock(&mainw->abuf_frame_mutex);
           }
           for (i = 0; i < jackd->num_output_channels; i++) {
             sample_silence_dS(out_buffer[i], nframes);
-            if (mainw->audio_frame_buffer!=NULL) {
+            if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
               append_to_audio_bufferf(mainw->audio_frame_buffer,out_buffer[i],nframes,i);
             }
           }
-          if (mainw->audio_frame_buffer!=NULL) {
+          if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
             mainw->audio_frame_buffer->samples_filled+=nframes;
             pthread_mutex_unlock(&mainw->abuf_frame_mutex);
           }
@@ -657,30 +657,30 @@ static int audio_process(nframes_t nframes, void *arg) {
 
               for (i=0; i<jackd->num_output_channels; i++) {
                 if (pl_error) {
-                  if (mainw->audio_frame_buffer!=NULL) {
+		  if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
                     pthread_mutex_lock(&mainw->abuf_frame_mutex);
                   }
                   for (i = 0; i < jackd->num_output_channels; i++) {
                     sample_silence_dS(out_buffer[i], numFramesToWrite);
-                    if (mainw->audio_frame_buffer!=NULL) {
+                    if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
                       append_to_audio_bufferf(mainw->audio_frame_buffer,out_buffer[i],nframes,i);
                     }
                   }
-                  if (mainw->audio_frame_buffer!=NULL) {
+		  if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
                     mainw->audio_frame_buffer->samples_filled+=numFramesToWrite;
                     pthread_mutex_unlock(&mainw->abuf_frame_mutex);
                   }
                 } else {
-                  if (mainw->audio_frame_buffer!=NULL) {
+		  if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
                     pthread_mutex_lock(&mainw->abuf_frame_mutex);
                   }
                   for (i = 0; i < jackd->num_output_channels; i++) {
                     lives_memcpy(out_buffer[i],fbuffer+(i*numFramesToWrite),numFramesToWrite*sizeof(float));
-                    if (mainw->audio_frame_buffer!=NULL) {
+                    if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
                       append_to_audio_bufferf(mainw->audio_frame_buffer,out_buffer[i],nframes,i);
                     }
                   }
-                  if (mainw->audio_frame_buffer!=NULL) {
+		  if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
                     mainw->audio_frame_buffer->samples_filled+=nframes;
                     pthread_mutex_unlock(&mainw->abuf_frame_mutex);
                   }
@@ -787,16 +787,16 @@ static int audio_process(nframes_t nframes, void *arg) {
             if (fbuffer!=NULL) lives_free(fbuffer);
 
           } else {
-            if (mainw->audio_frame_buffer!=NULL) {
+	    if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
               pthread_mutex_lock(&mainw->abuf_frame_mutex);
             }
             for (i = 0; i < jackd->num_output_channels; i++) {
               sample_silence_dS(out_buffer[i], numFramesToWrite);
-              if (mainw->audio_frame_buffer!=NULL) {
+              if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
                 append_to_audio_bufferf(mainw->audio_frame_buffer,out_buffer[i],nframes,i);
               }
             }
-            if (mainw->audio_frame_buffer!=NULL) {
+	    if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
               mainw->audio_frame_buffer->samples_filled+=numFramesToWrite;
               pthread_mutex_unlock(&mainw->abuf_frame_mutex);
             }
@@ -823,16 +823,16 @@ static int audio_process(nframes_t nframes, void *arg) {
                 unsigned char *inbuf=(unsigned char *)out_buffer;
                 xbuf=(unsigned char *)lives_try_malloc(nbytes);
                 if (!xbuf) {
-                  if (mainw->audio_frame_buffer!=NULL) {
+		  if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
                     pthread_mutex_lock(&mainw->abuf_frame_mutex);
                   }
                   for (i = 0; i < jackd->num_output_channels; i++) {
                     sample_silence_dS(out_buffer[i], numFramesToWrite);
-                    if (mainw->audio_frame_buffer!=NULL) {
+                    if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
                       append_to_audio_bufferf(mainw->audio_frame_buffer,out_buffer[i],nframes,i);
                     }
                   }
-                  if (mainw->audio_frame_buffer!=NULL) {
+		  if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
                     mainw->audio_frame_buffer->samples_filled+=numFramesToWrite;
                     pthread_mutex_unlock(&mainw->abuf_frame_mutex);
                   }
@@ -867,16 +867,16 @@ static int audio_process(nframes_t nframes, void *arg) {
               if (xbuf!=(unsigned char *)out_buffer) lives_free(xbuf);
             }
           } else {
-            if (mainw->audio_frame_buffer!=NULL) {
+	    if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
               pthread_mutex_lock(&mainw->abuf_frame_mutex);
             }
             for (i = 0; i < jackd->num_output_channels; i++) {
-              if (mainw->audio_frame_buffer!=NULL) {
-                sample_silence_dS(out_buffer[i], numFramesToWrite);
+	      sample_silence_dS(out_buffer[i], numFramesToWrite);
+	      if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
+		append_to_audio_bufferf(mainw->audio_frame_buffer,out_buffer[i],nframes,i);
               }
-              append_to_audio_bufferf(mainw->audio_frame_buffer,out_buffer[i],nframes,i);
             }
-            if (mainw->audio_frame_buffer!=NULL) {
+	    if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
               mainw->audio_frame_buffer->samples_filled+=numFramesToWrite;
               pthread_mutex_unlock(&mainw->abuf_frame_mutex);
             }
@@ -890,16 +890,16 @@ static int audio_process(nframes_t nframes, void *arg) {
       } else {
         // no input frames
         nframes=jackFramesAvailable;
-        if (mainw->audio_frame_buffer!=NULL) {
+	if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
           pthread_mutex_lock(&mainw->abuf_frame_mutex);
         }
         for (i = 0; i < jackd->num_output_channels; i++) {
           sample_silence_dS(out_buffer[i], numFramesToWrite);
-          if (mainw->audio_frame_buffer!=NULL) {
+          if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
             append_to_audio_bufferf(mainw->audio_frame_buffer,out_buffer[i],nframes,i);
           }
         }
-        if (mainw->audio_frame_buffer!=NULL) {
+        if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
           mainw->audio_frame_buffer->samples_filled+=numFramesToWrite;
           pthread_mutex_unlock(&mainw->abuf_frame_mutex);
         }
@@ -931,16 +931,16 @@ static int audio_process(nframes_t nframes, void *arg) {
       lives_printerr("buffer underrun of %ld frames\n", jackFramesAvailable);
 #endif
       for (i = 0 ; i < jackd->num_output_channels; i++) {
-        if (mainw->audio_frame_buffer!=NULL) {
+	if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
           pthread_mutex_lock(&mainw->abuf_frame_mutex);
         }
         for (i = 0; i < jackd->num_output_channels; i++) {
           sample_silence_dS(out_buffer[i] + (nframes - jackFramesAvailable), jackFramesAvailable);
-          if (mainw->audio_frame_buffer!=NULL) {
+          if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
             append_to_audio_bufferf(mainw->audio_frame_buffer,out_buffer[i],nframes,i);
           }
         }
-        if (mainw->audio_frame_buffer!=NULL) {
+        if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
           mainw->audio_frame_buffer->samples_filled+=jackFramesAvailable;
           pthread_mutex_unlock(&mainw->abuf_frame_mutex);
         }
@@ -960,16 +960,16 @@ static int audio_process(nframes_t nframes, void *arg) {
 #endif
 
     /* output silence if nothing is being outputted */
-    if (mainw->audio_frame_buffer!=NULL) {
+    if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
       pthread_mutex_lock(&mainw->abuf_frame_mutex);
     }
     for (i = 0; i < jackd->num_output_channels; i++) {
       sample_silence_dS(out_buffer[i], nframes);
-      if (mainw->audio_frame_buffer!=NULL) {
+      if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
         append_to_audio_bufferf(mainw->audio_frame_buffer,out_buffer[i],nframes,i);
       }
     }
-    if (mainw->audio_frame_buffer!=NULL) {
+    if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src!=AUDIO_SRC_EXT) {
       mainw->audio_frame_buffer->samples_filled+=nframes;
       pthread_mutex_unlock(&mainw->abuf_frame_mutex);
     }
@@ -1110,7 +1110,7 @@ static int audio_read(nframes_t nframes, void *arg) {
     if (has_audio_filters(AF_TYPE_A)) {
       uint64_t tc=jackd->audio_ticks+(uint64_t)(jackd->frames_written/(double)jackd->sample_in_rate*U_SEC);
 
-      if (mainw->audio_frame_buffer!=NULL) {
+      if (mainw->audio_frame_buffer!=NULL&&prefs->audio_src==AUDIO_SRC_EXT) {
         // if we have audio triggered gens., push audio to it
         pthread_mutex_lock(&mainw->abuf_frame_mutex);
         for (i=0; i<jackd->num_input_channels; i++) {
